syntax = "proto3";
package app_store;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/app_store";





/*
小产品包
*/
message AppStoreMicroApp {
    /*
    小产品名称
    */
    string name = 1 ;
    /*
    小产品id
    */
    string id = 2 ;
    /*
    图标url
    */
    string icon = 3 ;
    /*
    小产品概要介绍
    */
    string intro = 4 ;
    /*
    新功能
    */
    string newFeature = 5 ;
    /*
    功能预览
    */
    repeated string preview = 6 ;
    /*
    功能详细介绍
    */
    string description = 7 ;
}

